Fix navigation colors when its collapsed

--- a/assets/_sass/_navigation.scss
+++ b/assets/_sass/_navigation.scss
@@ -5,6 +5,25 @@
     text-decoration: none;
   }
 
+  .top-bar.expanded {
+    .title-area {
+      background-color: transparentize($theme-orange, .1);
+    }
+    .top-bar-section {
+      ul {
+        li.divider {
+          background-color: lighten($grey-color-dark, 2%);
+        }
+        li {
+          background-color: transparentize($grey-color-dark, .1);
+        }
+        li.active, li a:hover, li a:active {
+          background-color: $grey-color-dark;
+        }
+      }
+    }
+  }
+
   &.transparent {
     position: fixed;
     z-index: 1;
